--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "redux": "^4.0.0",
+    "redux-observable": "^1.0.0",
     "rxjs": "^6.0.0",
     "typescript-immutable-helper": "^0.6.3",
     "zone.js": "^0.8.26"
