--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,20 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@models/*": [
+        "src/model/*"
+      ],
+      "@environment": [
+        "src/environments/environment"
+      ],
+      "@store/*": [
+        "src/support/store/*"
+      ],
+      "@app/*": [
+        "src/app/*"
+      ]
+    }
   }
 }
