--- a/package.json
+++ b/package.json
@@ -11,44 +11,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/router": "^9.0.0",
-    "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular-redux/router": "^10.0.0",
+    "@angular-redux/store": "^10.0.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
     "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
-    "redux": "^4.0.0",
-    "redux-observable": "^1.0.0",
-    "rxjs": "^6.0.0",
+    "core-js": "^2.5.7",
+    "redux": "^4.0.1",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.5.2",
     "typescript-immutable-helper": "^0.6.3",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-angular": "~0.6.5",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.5",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular-devkit/build-angular": "~0.13.9",
+    "@angular/cli": "~7.3.9",
+    "@angular/language-service": "^7.2.15",
+    "@types/jasmine": "~2.8.9",
+    "@types/jasminewd2": "~2.0.6",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "codelyzer": "~5.1.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "redux-devtools-extension": "^2.13.8",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.17.0",
+    "typescript": "~3.2.4"
   }
 }
