--- a/package.json
+++ b/package.json
@@ -13,29 +13,28 @@
   "dependencies": {
     "@angular-redux/router": "^10.0.0",
     "@angular-redux/store": "^10.0.0",
-    "@angular/animations": "^7.2.15",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
-    "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
+    "@angular/animations": "^8.0.1",
+    "@angular/common": "^8.0.1",
+    "@angular/compiler": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/forms": "^8.0.1",
+    "@angular/platform-browser": "^8.0.1",
+    "@angular/platform-browser-dynamic": "^8.0.1",
+    "@angular/router": "^8.0.1",
     "bootstrap": "^4.1.3",
-    "core-js": "^2.5.7",
     "redux": "^4.0.1",
     "redux-observable": "^1.1.0",
     "rxjs": "^6.5.2",
+    "tslib": "^1.9.0",
     "typescript-immutable-helper": "^0.6.3",
-    "zone.js": "^0.8.29"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular-devkit/build-angular": "~0.13.9",
-    "@angular/cli": "~7.3.9",
-    "@angular/language-service": "^7.2.15",
-    "@types/jasmine": "~2.8.9",
+    "@angular-devkit/build-angular": "~0.800.3",
+    "@angular/cli": "~8.0.3",
+    "@angular/compiler-cli": "^8.0.1",
+    "@angular/language-service": "^8.0.1",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.1.0",
@@ -50,6 +49,6 @@
     "redux-devtools-extension": "^2.13.8",
     "ts-node": "~7.0.1",
     "tslint": "~5.17.0",
-    "typescript": "~3.2.4"
+    "typescript": "~3.4.5"
   }
 }
