--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-redux-shop:build"
+            "browserTarget": "angular-redux-shop:build",
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
