--- a/package.json
+++ b/package.json
@@ -11,44 +11,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/router": "^10.0.0",
-    "@angular-redux/store": "^10.0.0",
-    "@angular/animations": "^8.0.1",
-    "@angular/common": "^8.0.1",
-    "@angular/compiler": "^8.0.1",
-    "@angular/core": "^8.0.1",
-    "@angular/forms": "^8.0.1",
-    "@angular/platform-browser": "^8.0.1",
-    "@angular/platform-browser-dynamic": "^8.0.1",
-    "@angular/router": "^8.0.1",
-    "bootstrap": "^4.1.3",
-    "redux": "^4.0.1",
-    "redux-observable": "^1.1.0",
-    "rxjs": "^6.5.2",
-    "tslib": "^1.9.0",
-    "typescript-immutable-helper": "^0.6.3",
-    "zone.js": "^0.9.1"
+    "@angular-redux/router": "10.0.0",
+    "@angular-redux/store": "10.0.0",
+    "@angular/animations": "8.0.2",
+    "@angular/common": "8.0.2",
+    "@angular/compiler": "8.0.2",
+    "@angular/core": "8.0.2",
+    "@angular/forms": "8.0.2",
+    "@angular/platform-browser": "8.0.2",
+    "@angular/platform-browser-dynamic": "8.0.2",
+    "@angular/router": "8.0.2",
+    "bootstrap": "4.1.3",
+    "redux": "4.0.1",
+    "redux-observable": "1.1.0",
+    "rxjs": "6.5.2",
+    "tslib": "1.10.0",
+    "typescript-immutable-helper": "0.6.3",
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.3",
-    "@angular/cli": "~8.0.3",
-    "@angular/compiler-cli": "^8.0.1",
-    "@angular/language-service": "^8.0.1",
-    "@types/jasmine": "^3.3.13",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~5.1.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
-    "redux-devtools-extension": "^2.13.8",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.17.0",
-    "typescript": "~3.4.5"
+    "@angular-devkit/build-angular": "0.800.3",
+    "@angular/cli": "8.0.3",
+    "@angular/compiler-cli": "8.0.2",
+    "@angular/language-service": "8.0.2",
+    "@types/jasmine": "3.3.13",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "12.0.10",
+    "codelyzer": "5.1.0",
+    "jasmine-core": "3.4.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "4.1.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage-istanbul-reporter": "2.0.5",
+    "karma-jasmine": "2.0.1",
+    "karma-jasmine-html-reporter": "1.4.2",
+    "protractor": "5.4.2",
+    "redux-devtools-extension": "2.13.8",
+    "ts-node": "8.3.0",
+    "tslint": "5.18.0",
+    "typescript": "3.4.5"
   }
 }
