--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # dependencies
 /node_modules
 
+# test reports
+/layout-tests/reports
+
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
