Exit with fail code in case of Galen test failures

--- a/galen.config
+++ b/galen.config
@@ -80,7 +80,7 @@ spec.colorscheme.testrange = 6
 
 # Exit with fail code in case of any failures
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# galen.use.fail.exit.code = true
+galen.use.fail.exit.code = true
 
 
 # Test file extension for standard test runner
