--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,12 +4,11 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "include": [
-    "src/**/*.ts"
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
   ],
-  "exclude": [
-    "src/test.ts",
-    "src/**/*.spec.ts",
-    "src/support/testing/**/*.ts"
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
