--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "10.0.2",
     "bootstrap": "4.4.1",
     "redux": "4.0.1",
-    "redux-observable": "1.1.0",
+    "redux-observable-es6-compat": "1.2.1",
     "rxjs": "6.5.5",
     "tslib": "1.11.1",
     "typescript-immutable-helper": "0.6.3",
