--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "10.0.2",
     "@angular/platform-browser-dynamic": "10.0.2",
     "@angular/router": "10.0.2",
+    "@ngrx/store": "9.2.0",
     "bootstrap": "4.4.1",
     "redux": "4.0.1",
     "redux-observable-es6-compat": "1.2.1",
@@ -36,6 +37,7 @@
     "@angular/cli": "10.0.0",
     "@angular/compiler-cli": "10.0.2",
     "@angular/language-service": "10.0.2",
+    "@ngrx/schematics": "9.2.0",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.11.1",
