--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "10.0.2",
     "@angular/router": "10.0.2",
     "@ngrx/store": "9.2.0",
+    "@ngrx/store-devtools": "9.2.0",
     "bootstrap": "4.4.1",
     "redux": "4.0.1",
     "redux-observable-es6-compat": "1.2.1",
