--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "10.0.2",
     "@angular/platform-browser-dynamic": "10.0.2",
     "@angular/router": "10.0.2",
+    "@ngrx/effects": "9.2.0",
     "@ngrx/store": "9.2.0",
     "@ngrx/store-devtools": "9.2.0",
     "bootstrap": "4.4.1",
