Exclude src/support/testing from code coverage analysis

--- a/angular.json
+++ b/angular.json
@@ -94,6 +94,9 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
+            ],
+            "codeCoverageExclude": [
+              "src/support/testing/**/*.ts"
             ]
           }
         },
