--- a/angular.json
+++ b/angular.json
@@ -114,14 +114,25 @@
           }
         },
         "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+          "builder": "@migalons/angular-wdio-builder:test",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "wdioConfig": "e2e/src/integration-webdriver/wdio.conf.ts",
             "devServerTarget": "angular-redux-shop:serve"
           },
           "configurations": {
-            "production": {
-              "devServerTarget": "angular-redux-shop:serve:production"
+            "custom-config-file": {
+              "wdioConfig": "e2e/src/integration-webdriver/wdio.conf.ts"
+            },
+            "custom-options": {
+              "wdioOptions": {
+                "port": 4567
+              }
+            },
+            "custom-ng-port": {
+              "wdioOptions": {
+                "wdioConfig": "e2e/custom-ng-port.conf.js"
+              },
+              "port": 2000
             }
           }
         }
