--- a/package.json
+++ b/package.json
@@ -34,10 +34,16 @@
     "@angular/cli": "10.1.3",
     "@angular/compiler-cli": "10.1.3",
     "@angular/language-service": "10.1.3",
+    "@migalons/angular-wdio-builder": "1.0.2",
     "@ngrx/schematics": "10.0.0",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.11.1",
+    "@wdio/cli": "7.5.7",
+    "@wdio/jasmine-framework": "7.5.3",
+    "@wdio/local-runner": "7.5.7",
+    "@wdio/spec-reporter": "7.5.7",
+    "chromedriver": "90.0.0",
     "codelyzer": "5.2.1",
     "galenframework-cli": "2.4.4",
     "jasmine-core": "3.5.0",
@@ -50,6 +56,7 @@
     "protractor": "5.4.2",
     "ts-node": "8.3.0",
     "tslint": "6.1.2",
-    "typescript": "3.9.5"
+    "typescript": "3.9.5",
+    "wdio-chromedriver-service": "7.0.0"
   }
 }
