Don't create a new browser. Instead use the existing global.browser

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -5,10 +5,9 @@
     "module": "commonjs",
     "target": "es2018",
     "types": [
-      "jasmine",
-      "jasminewd2",
       "node",
-      "webdriverio/async"
+      "webdriverio/async",
+      "@wdio/jasmine-framework"
     ]
   }
 }
