Restore protractor and let it start with command 'e2e'. WebdriverIO now start with 'e2e:wdio'. Also clean up.

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -5,9 +5,9 @@
     "module": "commonjs",
     "target": "es2018",
     "types": [
-      "node",
-      "webdriverio/async",
-      "@wdio/jasmine-framework"
+      "jasmine",
+      "jasminewd2",
+      "node"
     ]
   }
 }
