--- a/angular.json
+++ b/angular.json
@@ -114,25 +114,14 @@
           }
         },
         "e2e": {
-          "builder": "@migalons/angular-wdio-builder:test",
+          "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "wdioConfig": "e2e/src/integration-webdriver/wdio.conf.ts",
+            "protractorConfig": "e2e/protractor.conf.js",
             "devServerTarget": "angular-redux-shop:serve"
           },
           "configurations": {
-            "custom-config-file": {
-              "wdioConfig": "e2e/src/integration-webdriver/wdio.conf.ts"
-            },
-            "custom-options": {
-              "wdioOptions": {
-                "port": 4567
-              }
-            },
-            "custom-ng-port": {
-              "wdioOptions": {
-                "wdioConfig": "e2e/custom-ng-port.conf.js"
-              },
-              "port": 2000
+            "production": {
+              "devServerTarget": "angular-redux-shop:serve:production"
             }
           }
         }
