--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "e2e:wdio": "wdio run ./e2e/src/integration-webdriver/wdio.conf.ts",
     "galen": "galen",
     "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh"
   },
@@ -34,7 +35,6 @@
     "@angular/cli": "10.1.3",
     "@angular/compiler-cli": "10.1.3",
     "@angular/language-service": "10.1.3",
-    "@migalons/angular-wdio-builder": "1.0.2",
     "@ngrx/schematics": "10.0.0",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
