--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@wdio/jasmine-framework": "7.5.3",
     "@wdio/local-runner": "7.5.7",
     "@wdio/spec-reporter": "7.5.7",
+    "wdio-chromedriver-service": "7.0.0",
     "chromedriver": "90.0.0",
     "codelyzer": "5.2.1",
     "galenframework-cli": "2.4.4",
@@ -56,7 +57,6 @@
     "protractor": "5.4.2",
     "ts-node": "8.3.0",
     "tslint": "6.1.2",
-    "typescript": "3.9.5",
-    "wdio-chromedriver-service": "7.0.0"
+    "typescript": "3.9.5"
   }
 }
