--- a/e2e/src/integration-webdriver/tsconfig.json
+++ b/e2e/src/integration-webdriver/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "../../../tsconfig.json",
     "compilerOptions": {
         "outDir": "../../out-tsc/e2e",
-        "module": "commonjs",
-        "target": "es2018",
+        "module": "es2020",
+        "target": "es2015",
         "types": [
             "node",
             "webdriverio/async",
