--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "e2e:playwright": "jest --config ./e2e-playwright/jest.config.js --detectOpenHandles",
     "galen": "galen",
     "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh"
+  },
+  "jest": {
+    "preset": "jest-playwright-preset"
   },
   "private": true,
   "dependencies": {
@@ -37,17 +41,22 @@
     "@ngrx/schematics": "10.0.0",
     "@types/jasmine": "3.3.13",
     "@types/jasminewd2": "2.0.6",
+    "@types/jest": "26.0.23",
     "@types/node": "12.11.1",
     "codelyzer": "5.2.1",
     "galenframework-cli": "2.4.4",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
+    "jest": "26.6.3",
+    "jest-playwright-preset": "1.5.2",
     "karma": "4.4.1",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.2",
+    "playwright": "1.11.0",
     "protractor": "5.4.2",
+    "ts-jest": "26.5.6",
     "ts-node": "8.3.0",
     "tslint": "6.1.2",
     "typescript": "3.9.5"
