--- a/e2e-webdriver/tsconfig.json
+++ b/e2e-webdriver/tsconfig.json
@@ -1,5 +1,7 @@
 {
-    "extends": "../tsconfig.json",
+    "include": [
+        "src/**/*.ts"
+    ],
     "compilerOptions": {
         "outDir": "../../out-tsc/e2e",
         "module": "es2020",
