Implement several changes suggested by Stefan. Also improve jasmine type support by altering the types array in tsconfig.json.

--- a/e2e-webdriver/tsconfig.json
+++ b/e2e-webdriver/tsconfig.json
@@ -9,7 +9,8 @@
         "types": [
             "node",
             "webdriverio/async",
-            "@wdio/jasmine-framework"
+            "jasmine",
+            "expect-webdriverio/jasmine",
         ]
     }
 }
