--- a/e2e-webdriver/tsconfig.json
+++ b/e2e-webdriver/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts", "wdio.conf.ts"
     ],
     "compilerOptions": {
         "outDir": "../../out-tsc/e2e",
