--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "e2e:playwright": "jest --config ./e2e-playwright/jest.config.js --detectOpenHandles",
-    "e2e:wdio": "wdio run ./e2e-webdriver/wdio.conf.ts",
+    "e2e:wdio": "wdio run ./e2e-wdio/wdio.conf.ts",
     "galen": "galen",
     "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh"
   },
