--- a/package.json
+++ b/package.json
@@ -18,30 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.1.3",
-    "@angular/common": "10.1.3",
-    "@angular/compiler": "10.1.3",
-    "@angular/core": "10.1.3",
-    "@angular/forms": "10.1.3",
-    "@angular/platform-browser": "10.1.3",
-    "@angular/platform-browser-dynamic": "10.1.3",
-    "@angular/router": "10.1.3",
-    "@ngrx/effects": "10.0.0",
-    "@ngrx/store": "10.0.0",
-    "@ngrx/store-devtools": "10.0.0",
+    "@angular/animations": "11.2.14",
+    "@angular/common": "11.2.14",
+    "@angular/compiler": "11.2.14",
+    "@angular/core": "11.2.14",
+    "@angular/forms": "11.2.14",
+    "@angular/platform-browser": "11.2.14",
+    "@angular/platform-browser-dynamic": "11.2.14",
+    "@angular/router": "11.2.14",
+    "@ngrx/effects": "11.1.1",
+    "@ngrx/store": "11.1.1",
+    "@ngrx/store-devtools": "11.1.1",
     "bootstrap": "4.4.1",
-    "rxjs": "6.5.5",
-    "tslib": "2.0.0",
+    "rxjs": "6.6.7",
+    "tslib": "2.1.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.3",
-    "@angular/cli": "10.1.3",
-    "@angular/compiler-cli": "10.1.3",
-    "@angular/language-service": "10.1.3",
+    "@angular-devkit/build-angular": "0.1102.14",
+    "@angular/cli": "11.2.14",
+    "@angular/compiler-cli": "11.2.14",
+    "@angular/language-service": "11.2.14",
     "@ngrx/schematics": "10.0.0",
-    "@types/jasmine": "3.3.13",
-    "@types/jasminewd2": "2.0.6",
+    "@types/jasmine": "3.6.11",
     "@types/jest": "26.0.23",
     "@types/node": "12.11.1",
     "@wdio/cli": "7.7.4",
@@ -51,21 +50,21 @@
     "chromedriver": "91.0.1",
     "codelyzer": "6.0.2",
     "galenframework-cli": "2.4.4",
-    "jasmine-core": "3.5.0",
-    "jasmine-spec-reporter": "4.2.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.2",
     "jest": "26.6.3",
     "jest-playwright-preset": "1.5.2",
-    "karma": "4.4.1",
+    "karma": "5.1.1",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "2.1.1",
-    "karma-jasmine": "3.1.1",
-    "karma-jasmine-html-reporter": "1.5.2",
+    "karma-coverage": "2.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
     "playwright": "1.11.0",
-    "protractor": "5.4.2",
+    "protractor": "7.0.0",
     "ts-jest": "26.5.6",
     "ts-node": "8.3.0",
     "tslint": "6.1.2",
-    "typescript": "3.9.5",
+    "typescript": "4.1.6",
     "wdio-chromedriver-service": "7.1.0"
   }
 }
