--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "e2e:playwright": "jest --config ./e2e-playwright/jest.config.js --detectOpenHandles",
-    "e2e:wdio": "wdio run ./e2e-wdio/wdio.conf.ts",
+    "e2e:wdio": "(set TS_NODE_PROJECT=./e2e-wdio/tsconfig.json) && wdio run ./e2e-wdio/wdio.conf.ts",
     "galen": "galen",
     "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh"
   },
@@ -18,29 +18,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.14",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "11.2.14",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/router": "11.2.14",
-    "@ngrx/effects": "11.1.1",
-    "@ngrx/store": "11.1.1",
-    "@ngrx/store-devtools": "11.1.1",
+    "@angular/animations": "12.0.5",
+    "@angular/common": "12.0.5",
+    "@angular/compiler": "12.0.5",
+    "@angular/core": "12.0.5",
+    "@angular/forms": "12.0.5",
+    "@angular/platform-browser": "12.0.5",
+    "@angular/platform-browser-dynamic": "12.0.5",
+    "@angular/router": "12.0.5",
+    "@ngrx/effects": "12.1.0",
+    "@ngrx/store": "12.1.0",
+    "@ngrx/store-devtools": "12.1.0",
     "bootstrap": "4.4.1",
     "rxjs": "6.6.7",
-    "tslib": "2.1.0",
-    "zone.js": "0.10.3"
+    "tslib": "2.3.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.14",
-    "@angular/cli": "11.2.14",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/language-service": "11.2.14",
-    "@ngrx/schematics": "10.0.0",
-    "@types/jasmine": "3.6.11",
+    "@angular-devkit/build-angular": "12.0.5",
+    "@angular/cli": "12.0.5",
+    "@angular/compiler-cli": "12.0.5",
+    "@angular/language-service": "12.0.5",
+    "@ngrx/schematics": "12.1.0",
+    "@types/jasmine": "3.7.7",
     "@types/jest": "26.0.23",
     "@types/node": "12.11.1",
     "@wdio/cli": "7.7.4",
@@ -50,21 +50,20 @@
     "chromedriver": "91.0.1",
     "codelyzer": "6.0.2",
     "galenframework-cli": "2.4.4",
-    "jasmine-core": "3.6.0",
+    "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "5.0.2",
-    "jest": "26.6.3",
-    "jest-playwright-preset": "1.5.2",
-    "karma": "5.1.1",
+    "jest": "27.0.5",
+    "jest-playwright-preset": "1.6.1",
+    "karma": "6.3.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
-    "playwright": "1.11.0",
-    "protractor": "7.0.0",
-    "ts-jest": "26.5.6",
-    "ts-node": "8.3.0",
+    "playwright": "1.12.2",
+    "ts-jest": "27.0.3",
+    "ts-node": "9.1.1",
     "tslint": "6.1.2",
-    "typescript": "4.1.6",
+    "typescript": "4.2.4",
     "wdio-chromedriver-service": "7.1.0"
   }
 }
