--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.0.5",
+    "@angular-eslint/builder": "12.2.0",
+    "@angular-eslint/eslint-plugin": "12.2.0",
+    "@angular-eslint/eslint-plugin-template": "12.2.0",
+    "@angular-eslint/schematics": "12.2.0",
+    "@angular-eslint/template-parser": "12.2.0",
     "@angular/cli": "12.0.5",
     "@angular/compiler-cli": "12.0.5",
     "@angular/language-service": "12.0.5",
@@ -43,12 +48,14 @@
     "@types/jasmine": "3.7.7",
     "@types/jest": "26.0.23",
     "@types/node": "12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "@wdio/cli": "7.7.4",
     "@wdio/jasmine-framework": "7.7.3",
     "@wdio/local-runner": "7.7.4",
     "@wdio/spec-reporter": "7.7.3",
     "chromedriver": "91.0.1",
-    "codelyzer": "6.0.2",
+    "eslint": "7.29.0",
     "galenframework-cli": "2.4.4",
     "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "5.0.2",
@@ -62,7 +69,6 @@
     "playwright": "1.12.2",
     "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
-    "tslint": "6.1.2",
     "typescript": "4.2.4",
     "wdio-chromedriver-service": "7.1.0"
   }
