--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "e2e:playwright": "jest --config ./e2e-playwright/jest.config.js --detectOpenHandles",
+    "e2e:playwright": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && playwright test --config=./e2e-playwright/playwright.config.ts",
     "e2e:wdio": "(set TS_NODE_PROJECT=./e2e-wdio/tsconfig.json) && wdio run ./e2e-wdio/wdio.conf.ts",
     "galen": "galen",
     "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh"
@@ -45,8 +45,8 @@
     "@angular/compiler-cli": "12.0.5",
     "@angular/language-service": "12.0.5",
     "@ngrx/schematics": "12.1.0",
+    "@playwright/test": "1.12.2",
     "@types/jasmine": "3.7.7",
-    "@types/jest": "26.0.23",
     "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
@@ -59,15 +59,12 @@
     "galenframework-cli": "2.4.4",
     "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "5.0.2",
-    "jest": "27.0.5",
-    "jest-playwright-preset": "1.6.1",
     "karma": "6.3.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
     "playwright": "1.12.2",
-    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "typescript": "4.2.4",
     "wdio-chromedriver-service": "7.1.0"
