--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
     "playwright": "1.12.2",
+    "prettier": "2.3.1",
     "ts-node": "9.1.1",
     "typescript": "4.2.4",
     "wdio-chromedriver-service": "7.1.0"
