Initially format project using prettier

--- a/e2e-playwright/tsconfig.json
+++ b/e2e-playwright/tsconfig.json
@@ -5,8 +5,6 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "types": [
-      "expect-playwright",
-    ]
-  },
+    "types": ["expect-playwright"]
+  }
 }
