--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@wdio/spec-reporter": "7.7.3",
     "chromedriver": "91.0.1",
     "eslint": "7.29.0",
+    "eslint-config-prettier": "8.3.0",
     "galenframework-cli": "2.4.4",
     "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "5.0.2",
