--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "e2e:playwright": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && playwright test --config=./e2e-playwright/playwright.config.ts",
     "e2e:wdio": "(set TS_NODE_PROJECT=./e2e-wdio/tsconfig.json) && wdio run ./e2e-wdio/wdio.conf.ts",
     "galen": "galen",
-    "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh"
+    "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh",
+    "prepare": "husky install"
   },
   "jest": {
     "preset": "jest-playwright-preset"
@@ -58,6 +59,7 @@
     "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
     "galenframework-cli": "2.4.4",
+    "husky": "6.0.0",
     "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "5.0.2",
     "karma": "6.3.4",
@@ -67,6 +69,7 @@
     "karma-jasmine-html-reporter": "1.5.4",
     "playwright": "1.12.2",
     "prettier": "2.3.1",
+    "pretty-quick": "3.1.1",
     "ts-node": "9.1.1",
     "typescript": "4.2.4",
     "wdio-chromedriver-service": "7.1.0"
