Add jasmine eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,10 @@
       "extends": [
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:jasmine/recommended",
         "prettier"
       ],
+      "plugins": ["jasmine"],
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
@@ -29,7 +31,12 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "jasmine/no-unsafe-spy": "error",
+        "jasmine/no-spec-dupes": ["error", "branch"]
+      },
+      "env": {
+        "jasmine": true
       }
     },
     {
