--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "@wdio/local-runner": "7.7.4",
     "@wdio/spec-reporter": "7.7.3",
     "chromedriver": "91.0.1",
-    "eslint": "7.29.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.4.0",
+    "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4",
     "husky": "6.0.0",
     "jasmine-core": "3.7.1",
@@ -64,8 +65,8 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
     "playwright": "1.12.2",
-    "prettier": "2.3.1",
-    "pretty-quick": "3.1.1",
+    "prettier": "2.5.1",
+    "pretty-quick": "3.1.3",
     "ts-node": "9.1.1",
     "typescript": "4.2.4",
     "wdio-chromedriver-service": "7.1.0"
