--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "stylelint": "stylelint src/**/{*.scss,*.css}",
     "e2e:playwright": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && playwright test --config=./e2e-playwright/playwright.config.ts",
     "e2e:wdio": "(set TS_NODE_PROJECT=./e2e-wdio/tsconfig.json) && wdio run ./e2e-wdio/wdio.conf.ts",
     "galen": "galen",
@@ -65,8 +66,14 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
     "playwright": "1.12.2",
+    "postcss": "8.4.6",
     "prettier": "2.5.1",
     "pretty-quick": "3.1.3",
+    "stylelint": "14.5.3",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-sass-guidelines": "9.0.1",
+    "stylelint-config-standard-scss": "3.0.0",
+    "stylelint-no-unsupported-browser-features": "5.0.3",
     "ts-node": "9.1.1",
     "typescript": "4.2.4",
     "wdio-chromedriver-service": "7.1.0"
