--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@angular/platform-browser": "13.2.4",
     "@angular/platform-browser-dynamic": "13.2.4",
     "@angular/router": "13.2.4",
-    "@ngrx/effects": "12.1.0",
-    "@ngrx/store": "12.1.0",
-    "@ngrx/store-devtools": "12.1.0",
+    "@ngrx/effects": "13.0.2",
+    "@ngrx/store": "13.0.2",
+    "@ngrx/store-devtools": "13.0.2",
     "bootstrap": "4.4.1",
     "rxjs": "6.6.7",
     "tslib": "2.3.0",
@@ -57,7 +57,7 @@
     "eslint-config-prettier": "8.4.0",
     "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4",
-    "husky": "6.0.0",
+    "husky": "^7.0.0",
     "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "5.0.2",
     "karma": "6.3.4",
