--- a/package.json
+++ b/package.json
@@ -45,19 +45,19 @@
     "@ngrx/schematics": "13.0.2",
     "@playwright/test": "1.12.2",
     "@types/jasmine": "3.7.7",
-    "@types/node": "12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
+    "@typescript-eslint/parser": "5.12.1",
     "@wdio/cli": "7.7.4",
     "@wdio/jasmine-framework": "7.7.3",
     "@wdio/local-runner": "7.7.4",
     "@wdio/spec-reporter": "7.7.3",
     "chromedriver": "91.0.1",
-    "eslint": "7.32.0",
+    "eslint": "8.10.0",
     "eslint-config-prettier": "8.4.0",
     "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4",
-    "husky": "^7.0.0",
+    "husky": "7.0.4",
     "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "5.0.2",
     "karma": "6.3.4",
