--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store": "14.0.2",
     "@ngrx/store-devtools": "14.0.2",
     "bootstrap": "4.4.1",
+    "galenframework-cli": "2.4.4-build43",
     "rxjs": "7.5.6",
     "tslib": "2.4.0",
     "zone.js": "0.11.7"
