update angular@15 & fontawesome@0.12.1 (@angular/cli; @angular/core; @angular-eslint/schematics; @ngrx/store)

--- a/angular.json
+++ b/angular.json
@@ -112,5 +112,13 @@
   "defaultProject": "angular-redux-shop",
   "cli": {
     "defaultCollection": "@angular-eslint/schematics"
+  },
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
   }
 }
