--- a/package.json
+++ b/package.json
@@ -16,47 +16,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.1.0",
-    "@angular/common": "14.1.0",
-    "@angular/compiler": "14.1.0",
-    "@angular/core": "14.1.0",
-    "@angular/forms": "14.1.0",
-    "@angular/platform-browser": "14.1.0",
-    "@angular/platform-browser-dynamic": "14.1.0",
-    "@angular/router": "14.1.0",
-    "@fortawesome/angular-fontawesome": "0.11.1",
+    "@angular/animations": "15.1.4",
+    "@angular/common": "15.1.4",
+    "@angular/compiler": "15.1.4",
+    "@angular/core": "15.1.4",
+    "@angular/forms": "15.1.4",
+    "@angular/platform-browser": "15.1.4",
+    "@angular/platform-browser-dynamic": "15.1.4",
+    "@angular/router": "15.1.4",
+    "@fortawesome/angular-fontawesome": "0.12.1",
     "@fortawesome/fontawesome-svg-core": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
-    "@ngrx/effects": "14.0.2",
-    "@ngrx/store": "14.0.2",
-    "@ngrx/store-devtools": "14.0.2",
+    "@ngrx/effects": "15.3.0",
+    "@ngrx/store": "15.3.0",
+    "@ngrx/store-devtools": "15.3.0",
     "bootstrap": "4.4.1",
     "rxjs": "7.5.6",
     "tslib": "2.4.0",
     "zone.js": "0.11.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.10",
-    "@angular-eslint/builder": "14.0.2",
-    "@angular-eslint/eslint-plugin": "14.0.2",
-    "@angular-eslint/eslint-plugin-template": "14.0.2",
-    "@angular-eslint/schematics": "14.0.2",
-    "@angular-eslint/template-parser": "14.0.2",
-    "@angular/cli": "14.1.0",
-    "@angular/compiler-cli": "14.1.0",
-    "@angular/language-service": "14.1.0",
-    "@ngrx/schematics": "14.0.2",
+    "@angular-devkit/build-angular": "15.1.5",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "15.1.5",
+    "@angular/compiler-cli": "15.1.4",
+    "@angular/language-service": "15.1.4",
+    "@ngrx/schematics": "15.3.0",
     "@playwright/test": "1.26.1",
     "@types/jasmine": "4.0.3",
     "@types/node": "18.13.0",
-    "@typescript-eslint/eslint-plugin": "5.30.7",
-    "@typescript-eslint/parser": "5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "@wdio/cli": "7.25.1",
     "@wdio/jasmine-framework": "7.25.1",
     "@wdio/local-runner": "7.25.1",
     "@wdio/spec-reporter": "7.25.1",
     "chromedriver": "109.0.0",
-    "eslint": "8.20.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-jasmine": "4.1.3",
     "galenframework-cli": "2.4.4-build43",
