updating and integrating bootstrap grid

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["node_modules/bootstrap/dist/css/bootstrap-grid.min.css", "src/styles.scss"],
             "scripts": []
           },
           "configurations": {
