add deploy action to build yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,11 @@ jobs:
         run: |
           npm run build
 
-      #- name: Deploy to GitHub Pages
-      #  run:
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist/angular-redux-shop/
 
       # karma test
       #- name: Karma Test
