run build.yml on push& pull request regardless of branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,8 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/angular-redux-shop/
+          publish_dir: ./dist/
+          publish_branch: gh_pages
 
       # karma test
       #- name: Karma Test
