add destination direction to load scripts from matching directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist/angular-redux-shop
           publish_branch: gh-pages
+          destination_dir: ./angular-styleguide
 
       # karma test
       #- name: Karma Test
