different build for production

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production --base-href=/angular-styleguide/",
     "test": "ng test",
     "lint": "ng lint",
     "stylelint": "stylelint src/**/{*.scss,*.css}",
