add playwright to e2e tests

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -4,8 +4,7 @@ on:
   workflow_run:
     # run E2E Tests after recent build has been deployed to GitHub pages
     workflows: ['pages-build-deployment']
-    types:
-      - completed
+    types: [completed]
 
 jobs:
   test:
