--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "ng lint",
     "stylelint": "stylelint src/**/{*.scss,*.css}",
     "e2e:playwright": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && playwright test --config=./e2e-playwright/playwright.config.ts",
+    "e2e:playwright:ui": "(set TS_NODE_PROJECT=./e2e-playwright/tsconfig.json) && playwright test --ui --config=./e2e-playwright/playwright.config.ts",
     "e2e:wdio": "(set TS_NODE_PROJECT=./e2e-wdio/tsconfig.json) && wdio run ./e2e-wdio/wdio.conf.ts",
     "galen": "galen",
     "layout-tests:browserstack": "bash ./layout-tests/run-tests-on-browserstack.sh",
@@ -52,7 +53,7 @@
     "@angular/compiler-cli": "15.1.4",
     "@angular/language-service": "15.1.4",
     "@ngrx/schematics": "15.3.0",
-    "@playwright/test": "1.31.1",
+    "@playwright/test": "1.37.1",
     "@types/jasmine": "4.3.1",
     "@types/node": "18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -73,7 +74,7 @@
     "karma-coverage": "2.2.0",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.0.0",
-    "playwright": "1.31.1",
+    "playwright": "1.37.1",
     "postcss": "8.4.21",
     "prettier": "2.8.4",
     "pretty-quick": "3.1.3",
