CFWEB-91 - Update dependencies * update angular@17, ngrx@17, typescript, ts-node, types/node, eslint & fortawesome * removing polyfills from project structure

--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             "outputPath": "dist/angular-redux-shop",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
@@ -73,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angular-redux-shop:build:production"
+              "buildTarget": "angular-redux-shop:build:production"
             },
             "development": {
-              "browserTarget": "angular-redux-shop:build:development"
+              "buildTarget": "angular-redux-shop:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -84,14 +84,14 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-redux-shop:build"
+            "buildTarget": "angular-redux-shop:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": ["src/favicon.ico", "src/assets"],
