CFWEB-69-playwright-and-browserstack
add documentation for starting github workflow

--- a/browserstack.yml
+++ b/browserstack.yml
@@ -11,9 +11,9 @@ accessKey: ${BROWSERSTACK_ACCESS_KEY}
 # ======================
 # The following capabilities are used to set up reporting on BrowserStack:
 # Set 'projectName' to the name of your project. Example, Marketing Website
-projectName: BrowserStack Samples
+projectName: Angular Styleguide
 # Set `buildName` as the name of the job / testsuite being run
-buildName: browserstack build
+buildName: Ice Cream Shop
 # `buildIdentifier` is a unique id to differentiate every execution that gets appended to
 # buildName. Choose your buildIdentifier format from the available expressions:
 # ${BUILD_NUMBER} (Default): Generates an incremental counter with every execution
