CFWEB-69-playwright-and-browserstack
change input variable to type secret

--- a/.github/workflows/run-playwright-browserstack.yml
+++ b/.github/workflows/run-playwright-browserstack.yml
@@ -2,7 +2,7 @@ name: Run Playwright on Browserstack
 
 on:
   workflow_dispatch:
-    inputs:
+    secrets:
       user_name:
         description: browserstack user name
         required: true
